Minor Refactorings for Dto classes